<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_register_fill_form"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        />
    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="14dp" />
    <EditText
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_phone"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="14dp" />
    <ImageView
        android:id="@+id/receipt"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="14dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp">

        <Button
            android:id="@+id/receiptButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/receipt_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/send_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            android:backgroundTint="@color/teal_200"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>