<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment"
    android:id="@+id/main"
    android:visibility="visible">
    <ProgressBar
        android:id="@+id/progress_barSingleActivity"
        style="?android:attr/progressBarStyle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/singleMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.synnapps.carouselview.CarouselView
                        android:id="@+id/carouselView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:fillColor="#FFFFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:pageColor="#00000000"
                        app:radius="6dp"
                        app:slideInterval="3000"
                        app:strokeColor="#FF777777"
                        app:strokeWidth="1dp"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/titlePlacesLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/titleSingle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="14dp"
                            android:layout_marginLeft="14dp"
                            android:layout_marginEnd="14dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/placesSingle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="14dp"
                            android:layout_marginEnd="14dp"
                            android:layout_marginLeft="14dp"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/titleSingle" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/priceLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="14dp">

                        <ImageView
                            android:id="@+id/imageViewPrice"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="14dp"
                            android:layout_marginLeft="14dp"
                            android:src="@drawable/ic_money2"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/priceSingle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageViewPrice"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/dateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="14dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="14dp"
                            android:layout_marginLeft="14dp"
                            android:src="@drawable/ic_date"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/dateSingle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/extraInfLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp">

                        <ImageView
                            android:id="@+id/close"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:src="@drawable/ic_close"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textSingle"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/open"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:src="@drawable/ic_open"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textSingle"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textSingle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:text="@string/payment"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:id="@+id/paymentSingleLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/paymentSingle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:text="@string/extra_information"
                            android:textColor="#000000"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/descLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="100dp"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/descSingle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>